# ddlglot

./: .commitlintrc.json  .gitignore  .pre-commit-config.yaml  .release-please-config.json  AGENTS.md  CHANGELOG.md  CICD_ARCHITECTURE.md  PLAN.md  README.md  init.md  prd.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  release-please.yml
docs/: api_reference.rst  conf.py  core_builder.rst  dialects.rst  index.rst  motivation.rst  quickstart.rst
docs/_static/: fonts.css
docs/_templates/: version.html
docs/variants/: bigquery.rst  duckdb.rst  hive.rst  index.rst  postgres.rst  spark_delta.rst
src/ddlglot/: __init__.py  builder.py  exceptions.py  indexer.py  properties.py  registry.py  types.py
src/ddlglot/variants/: __init__.py  bigquery.py  duckdb.py  hive.py  postgres.py  spark_delta.py
tests/: test_bigquery.py  test_constraints.py  test_core.py  test_duckdb.py  test_hive.py  test_indexer.py  test_inspection.py  test_postgres.py  test_registry.py  test_spark_delta.py  test_validation.py
